Update keycloak login page with various fixes.
Including edge case handling in error template, missing message property,
stub css file

--- a/src/main/resources/keycloak/themes/libriciel/login/messages/messages_fr.properties
+++ b/src/main/resources/keycloak/themes/libriciel/login/messages/messages_fr.properties
@@ -81,6 +81,7 @@ loginTotpManualStep3=Utilisez la configuration de valeur suivante si l''applicat
 loginTotpUnableToScan=Impossible de scanner?
 loginTotpScanBarcode=Scanner le code barre ?
 loginTotpOneTime=Code \u00e0 usage unique
+loginOtpOneTime=Code \u00e0 usage unique
 loginTotpType=Type
 loginTotpAlgorithm=Algorithme
 loginTotpDigits=Chiffres
