--- a/src/main/resources/keycloak/themes/libriciel/login/messages/messages_fr.properties
+++ b/src/main/resources/keycloak/themes/libriciel/login/messages/messages_fr.properties
@@ -120,7 +120,7 @@ emailLinkIdp4=Si vous avez d\u00e9j\u00e0 v\u00e9rifi\u00e9 votre courriel dans 
 emailLinkIdp5=pour continuer.
 backToLogin=Revenir \u00e0 l''\u00e9cran de connexion
 emailInstruction=Un e-mail va vous \u00eatre envoy\u00e9.<br> Vous pourrez ainsi cr\u00e9er un nouveau mot de passe.
-forgotPasswordInstruction=Saisissez votre nom d''utilisateur ou votre adresse mail
+forgotPasswordInstruction=Saisissez votre identifiant
 copyCodeInstruction=Copiez le code et recopiez le dans votre application :
 pageExpiredTitle=La page a expir\u00e9
 pageExpiredMsg1=Pour recommencer le processus d''authentification
@@ -163,7 +163,7 @@ expiredActionTokenSessionExistsMessage=Action expir\u00e9e. Merci de recommencer
 missingFirstNameMessage=Veuillez entrer votre pr\u00e9nom.
 missingLastNameMessage=Veuillez entrer votre nom.
 missingEmailMessage=Veuillez entrer votre courriel.
-missingUsernameMessage=Veuillez entrer votre nom d''utilisateur.
+missingUsernameMessage=Veuillez entrer votre identifiant.
 missingPasswordMessage=Veuillez entrer votre mot de passe.
 missingTotpMessage=Veuillez entrer votre code d''authentification.
 notMatchPasswordMessage=Les mots de passe ne sont pas identiques.
@@ -171,7 +171,7 @@ invalidPasswordExistingMessage=Mot de passe existant invalide.
 invalidPasswordBlacklistedMessage=Mot de passe invalide : ce mot de passe est blacklist\u00e9.
 invalidPasswordConfirmMessage=Le mot de passe de confirmation ne correspond pas.
 invalidTotpMessage=Le code d''authentification est invalide.
-usernameExistsMessage=Le nom d''utilisateur existe d\u00e9j\u00e0.
+usernameExistsMessage=L''identifiant existe d\u00e9j\u00e0.
 emailExistsMessage=Le courriel existe d\u00e9j\u00e0.
 federatedIdentityExistsMessage=L''utilisateur avec {0} {1} existe d\u00e9j\u00e0. Veuillez acc\u00e9der \u00e0 au gestionnaire de compte pour lier le compte.
 federatedIdentityEmailExistsMessage=Cet utilisateur avec ce courriel existe d\u00e9j\u00e0. Veuillez vous connecter au gestionnaire de compte pour lier le compte.
@@ -196,7 +196,7 @@ invalidPasswordMinDigitsMessage=Mot de passe invalide : doit contenir au moins {
 invalidPasswordMinLowerCaseCharsMessage=Mot de passe invalide : doit contenir au moins {0} lettre(s) en minuscule.
 invalidPasswordMinUpperCaseCharsMessage=Mot de passe invalide : doit contenir au moins {0} lettre(s) en majuscule.
 invalidPasswordMinSpecialCharsMessage=Mot de passe invalide : doit contenir au moins {0} caract\u00e8re(s) sp\u00e9ciaux.
-invalidPasswordNotUsernameMessage=Mot de passe invalide : ne doit pas \u00eatre identique au nom d''utilisateur.
+invalidPasswordNotUsernameMessage=Mot de passe invalide : ne doit pas \u00eatre identique \u00e0 l''identifiant.
 invalidPasswordRegexPatternMessage=Mot de passe invalide : ne valide pas l''expression rationnelle.
 invalidPasswordHistoryMessage=Mot de passe invalide : ne doit pas \u00eatre \u00e9gal aux {0} derniers mots de passe.
 invalidPasswordGenericMessage=Mot de passe invalide : le nouveau mot de passe ne r\u00e9pond pas \u00e0 la politique de mot de passe.
